# ChangeLog for app-office/openoffice
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.491 2009/10/04 12:44:06 suka Exp $

  04 Oct 2009; Andreas Proschofsky <suka@gentoo.org>
  -files/buildfix-gcc44.diff, -openoffice-3.1.0-r1.ebuild,
  -files/hunspell-one-dir-nocrash.diff,
  -files/solenv.workaround-for-the-kde-mess.diff:
  Further security related cleanup

  04 Oct 2009; Andreas Proschofsky <suka@gentoo.org>
  openoffice-3.1.1.ebuild:
  Re-add ~sparc as kde4 is masked now

  04 Oct 2009; Andreas Proschofsky <suka@gentoo.org>
  -openoffice-3.0.0.ebuild, -files/gentoo-3.0.0.diff,
  -files/fixsandbox.diff, -files/nojavanostax.diff:
  Clean out old, security vulnerable version

  04 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> openoffice-3.1.1.ebuild:
  Stable for ppc, bug 283370

  26 Sep 2009; Tobias Heinlein <keytoaster@gentoo.org>
  openoffice-3.1.1.ebuild:
  amd64 stable, security bug #283370

  24 Sep 2009; Andreas Proschofsky <suka@gentoo.org>
  -files/kde4-configure2.diff, -files/xulrunner-1.9.1.diff,
  openoffice-3.1.1.ebuild:
  Raise patchset to ooo-build 3.1.1.2, bunch of smaller fixes. Also remove 
  upstreamed patches

  24 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  openoffice-3.1.1.ebuild:
  stable x86, security bug 283370

  22 Sep 2009; Andreas Proschofsky <suka@gentoo.org>
  files/gentoo-3.1.1.diff, -files/dbfix.diff, +files/kde4-configure2.diff,
  openoffice-3.1.1.ebuild:
  Trying to fix KDE4 build problems, once again, see bug #283618

  20 Sep 2009; Andreas Proschofsky <suka@gentoo.org>
  openoffice-3.1.1.ebuild, files/gentoo-3.1.1.diff, +files/dbfix.diff:
  Fix build with sys-libs/db-4.8, bug #285544

  08 Sep 2009; Andreas Proschofsky <suka@gentoo.org>
  openoffice-3.1.1.ebuild, +files/boost-undefined-references.diff:
  Fix build problem in relation to boost, thanks to Jory A. Pratt 
  <anarchy@gentoo.org> for hunting it down. Closes bug #270947