@@ -33,27 +33,7 @@ DIST extras-3.tar.bz2 130640 RMD160 c6b6efb20cbec79b48bd21046f93959367fe1bd4 SHA
 DIST libwpg-0.1.3.tar.gz 410799 RMD160 6e9e0545215af2ee05780887ad57ca1ae7ef78f5 SHA1 6d350eb0ad57b97499ef8335506f172b0c21375a SHA256 19a52f4eede1da890ac6a5dfa5f0d9a63a73a6dfc3f17cb3423563c53cc665e3
 DIST libwps-0.1.2.tar.gz 413360 RMD160 a3f60fed70ab0c4f34091c10f4eb4a421cb87d44 SHA1 3da402f74a6296425e88d0ab1cf197a5927288d6 SHA256 e8f03fc83f7ddd3976adb61f693eaeebefee852655875816e5f945e0efabb2b1
 DIST lp_solve_5.5.0.12_source.tar.gz 787446 RMD160 8cd5299543e07d2bf1819297fe0a18400b18d12b SHA1 ffa7e52c18ffacef7ed3dfe535f4221e853068df SHA256 bc26d07fe39ae50264e15ee54dbbcf4cb1fe6ecd2fef10142be5bdd38947f193
-DIST ooo-build-3.1.0.6.tar.gz 13199374 RMD160 52193324c3e69e403ed725fdfc1ac0065eb2a51c SHA1 a3325be780a3ae2833af3dffdc0c40482f0d1c8e SHA256 9c930bf6bb93595c6b3b4227c2e6188ef31698818fe6de15dc42f09089359798
 DIST ooo-build-3.1.1.2.tar.gz 13981745 RMD160 505db0e1673765d3e398e022f03535b00f76a01b SHA1 0d4533cedcfd7a7f22715668764b599f1fc6a10d SHA256 e94729b359ab5f5db6eb506b4562e8e4ab5140463be13a7d5536d43a6e8227b5
-DIST ooo310-m11-artwork.tar.bz2 9699172 RMD160 879132806579fdec881e7ed4e32191414c52cc0e SHA1 2dd68a74d1ce40f0bf6270c0e414876396958350 SHA256 c3af24301c85235afe0e3e86ceee56c36fae9318fdaa366f55cbe256dbc7737e
-DIST ooo310-m11-base.tar.bz2 3310363 RMD160 66e79afe97dcc7d82c76f682ea799e495bd10942 SHA1 e7c5fb4ced44f329769181d943d4284f8212b2a3 SHA256 2443026c719a55715788bcf67192cf39410b112a830998709e70fe6f2b5946d0
-DIST ooo310-m11-bootstrap.tar.bz2 7245734 RMD160 800f4828f33b4617cbe266fdb19cf93e80f32de3 SHA1 786975ce10b4ab38a6f9a0bb3cba005b83713242 SHA256 c97ee7594b769c765ec8b94205d3d76289d3d4b1a5b808e259f7d00588ab6961
-DIST ooo310-m11-calc.tar.bz2 9663046 RMD160 481c389dffb6e4a04cc190b468f7d613a0953fe7 SHA1 4efb32be8f66118b929bf9136378f72590747314 SHA256 c1b9c2a11f2ebad5901d89306311fdc7cb12c262b4637c5a5aff9d2c93404a69
-DIST ooo310-m11-components.tar.bz2 5990791 RMD160 a1e112509abda28638670dc31772d96e63eae795 SHA1 e54a788a70a5cd8f05d47a3d9bc8991d11ff544c SHA256 00cf6945073ec8385e027915b1374e206ec56a59eea5edbacc84fae5133083ee
-DIST ooo310-m11-extensions.tar.bz2 14789775 RMD160 afed9c3526fb09a156820369628c337e61f304e3 SHA1 cdad9be5b11434540c4c4135ea9fda2662f6825c SHA256 53b01101669381dbf61f5f49aced011a42a03ce50425fa4ddf6e84fe197024fc
-DIST ooo310-m11-extras.tar.bz2 46074505 RMD160 055dc9111e92fff3da418f1574ed5466b1414f4a SHA1 27b9a608fc1e64a0207152b9e64e6232160103a9 SHA256 d5d6bfcc5b434a5fa6765283420cde0dc74413ff48a5c85d884ca9e065a874b0
-DIST ooo310-m11-filters.tar.bz2 10795436 RMD160 a2a0d9e95b9e44237eb886cbb20ff2c5cf372dc3 SHA1 facd5f84b43e970ecb58337954e83ef76fd6f536 SHA256 99897ae4cfbc5b058b65ee57a97d7acd38a40fdc7032a67ef24739b0ce7f1f1c
-DIST ooo310-m11-help.tar.bz2 44865466 RMD160 845e83d4ceabc237350aaddd70140396e6d000a8 SHA1 7d0be276609566784384d561f9157e52950a88c3 SHA256 cf5b7f7d4e13142b6627f657326716486928178b8df1e3fb23406816498520f8
-DIST ooo310-m11-impress.tar.bz2 3548810 RMD160 64704d0abdcf532ea591dde8f162a18c0544bbde SHA1 9679e1822170524d26ccee95db3cb504c26c501e SHA256 a4b594abbef1c076f3a43fd88b6d87e0dcd0aeb20b43a618b66a96d497dadf9b
-DIST ooo310-m11-libs-core.tar.bz2 27371624 RMD160 a230690df75a7d0caf6583680e7ab538afb9efcb SHA1 aaba2f9e3310c73c05cbbaeb470ed9fe9b9fcd2f SHA256 ae4d67bb7f2e045958bd1c0dd8b2403a7b8322187393daaf3d2482ea262aa76c
-DIST ooo310-m11-libs-extern-sys.tar.bz2 105280413 RMD160 ef4549b1814087dfb571a3748cf031014f4f9c29 SHA1 d0ff64470f7a31855e745e2f92439f2ca84939b2 SHA256 b66b34fb191d8535315a0e47528c63b8731856c3311bf18782e6b77c8e1cb24e
-DIST ooo310-m11-libs-extern.tar.bz2 39916079 RMD160 2f40e139262e015af458ce97bef880e7825ec054 SHA1 db8fba930d97406e305ad9b3705898173a72424d SHA256 2a7a56f0046a05b285c66aacaf658257652a7faa3bc7e2c18feca72542282494
-DIST ooo310-m11-libs-gui.tar.bz2 11446021 RMD160 5ed350c573a4754fc8de1b8a755d3433f3dbf2ac SHA1 d97d90602fa3ea1d57cb5c9e9bd74ab656034442 SHA256 03fd40f491c034bd64a912ad39aa9fb9e0530f20d32dd5b2640a0431cd5635ba
-DIST ooo310-m11-postprocess.tar.bz2 19533 RMD160 01b019d0444b749f1d5833a8c1b82c5d0b5105d6 SHA1 9010bf249265c69c4d15355fed9a5f88b9fcb5cd SHA256 060c1d2632852a55b524d3a9f8ccd86fc573566dc7332a68a7f8058219284b9c
-DIST ooo310-m11-sdk.tar.bz2 1554459 RMD160 df4a743275155c4de0936ccbaa33532dd0d9c0ed SHA1 f60810d6163949364d43f2a40f4fd5f42e7b214a SHA256 770baee93184e2075c24c94070a7058df7b3fccb6c9840347fd167dd3bb2f493
-DIST ooo310-m11-testing.tar.bz2 51287333 RMD160 d729a23c1ee76feeb8d01898bed7630ff3b71da2 SHA1 c6ddcf7121ab5c2dbad88131bf926366ab57c2e8 SHA256 50342959f2eef3d6f3869816312ae2b966cf6fc02478d60ec80f473d1792e725
-DIST ooo310-m11-ure.tar.bz2 5160732 RMD160 fd419b3a6a77dac2d95bc55afba5591bed093093 SHA1 2412c683d0274c16a2b8b5263d60059a7080ce65 SHA256 c329eaf2cc7a46912fbd1fe685e91d941842c74f082419a03d88e75fae051db5
-DIST ooo310-m11-writer.tar.bz2 8955758 RMD160 876e1ecbd0bf8e6dbf9eaa95155868e44c33823f SHA1 fc37627f0a8aab578a64818f713ac87a838c4709 SHA256 093f42b6f102f3f9c7f934bdc071680fa50487628b8107aa335f623f8a770694
 DIST ooo310-m19-artwork.tar.bz2 9813919 RMD160 08f5228c9e85f7a287ccca70e25ecc66a4bbd053 SHA1 14ff8ae12d43c7f1c725c3c913fda848ecf54b0f SHA256 9e741c889c1bc80aea8d15ea5e1087d4750f874a8690e1926d6b88c24a133ff8
 DIST ooo310-m19-base.tar.bz2 3336925 RMD160 ea26c3664d1c52f0030e8fa5a1f0962b147f726b SHA1 18f33c1976d0e427cb4ac98041d82e0a8cd948c8 SHA256 9f6ff29dd9be1d7618bb8dc558ec4a4001b6e7bd8db8c70270ea756a36e1bc4a
 DIST ooo310-m19-bootstrap.tar.bz2 7270281 RMD160 456198813294cb74fccc80461f4e65d5c1f39638 SHA1 cbf62263d6b094cb348f16bb3e345425beee05f7 SHA256 3cc9653477d9a491dd2412e5a8cae848700a0a5b8a23d0c7a9e7b076751de287
@@ -76,7 +56,6 @@ DIST ooo310-m19-writer.tar.bz2 9021103 RMD160 47d18795af5e643d4f9eb323b27458ad1f
 DIST ooo_oxygen_images-2009-06-17.tar.gz 14296938 RMD160 355b7d43aff12578fc0af6ca6030301577477857 SHA1 c3dd261bfe366ac514a019b0fa829369b833c0c7 SHA256 3fcc0eb394ddfc43111ac27f35a7d966d4f775b0b46d6853c9b2b2612a940f4a
 DIST scsolver.2008-10-30.tar.bz2 230572 RMD160 2176fd8207cce2e2db56c888849e766eedfb1a63 SHA1 7ad9c3396c3b1b9ac63274eb53818ba2d0a9f70c SHA256 865ac491bfbc7d4cc66b51fff78f3962a0a91efba1a8b5cc0bf5cf36be60e193
 DIST unowinreg.dll 6144 RMD160 9e2a2789a96842a2aec747a62dee3db3e8370761 SHA1 712720da502d36175cd7aa05cb1862ee0330638c SHA256 f563e522922133db9340b0306711c2d8767cc3481dd9e7d9b0d059906d12653c
-EBUILD openoffice-3.1.0-r1.ebuild 13805 RMD160 18568d459393f7059c8b3ad8bb671725b73a30f7 SHA1 0f1e8f7f0f813b2090e64e3c9eccaa2af775ae6a SHA256 d58b9d25ae96ac713161e098c77b8d65dd59579932f005607918d79144d209b8
-EBUILD openoffice-3.1.1.ebuild 13917 RMD160 2f47065b07313bee9c87e11414e91c42d6267b59 SHA1 bf28406af38b7f72de5e08d3125a3464fb63a72e SHA256 bcc7bb4ee24e3b3a06d1a201ec33ccda982cdccfba570c684868757b3facb4ce
-MISC ChangeLog 102162 RMD160 de526cfe424625b3c09df28b65f01adbaea8ac54 SHA1 bd05e104f781dc0caf3a58855ab2a94bc1c42e5b SHA256 bfaff3607e4b7dffabc4d13a3ed2db553ee266600973ab99f5c6165733d297b8
+EBUILD openoffice-3.1.1.ebuild 13920 RMD160 eeaec5d25ee54e612ba894aa33a75f7d69c2602a SHA1 8a819faec7d80f65ffc2c34efc9ff35817c89097 SHA256 f6729278b636662a3dc993190694b3745123672b781f05ed24d2c368735becfb
+MISC ChangeLog 102287 RMD160 cc27198e29a99769c817cea99065e429daaec6ef SHA1 e7b37523985e168978c3a0c8ac8601350bb9cae8 SHA256 6e00434569cb39c8b4a3e047f94f21abf4240efa9f00961db3d9394d9b50503c
 MISC metadata.xml 704 RMD160 c65911c6a5496c96e51d40848179c3321fb5fafd SHA1 25c8229286d330cdf48dbca4847594359a35820f SHA256 c60a22487a895dd589228b2bd964c2481067bbdabd4d91c49bb38927482abd78
